# tosparser

./: .gitignore  CMakeLists.txt  README.md  main.c  modern_c_guidelines.md
include/: hashmap.h  ipf.h  shared_formats.h  xac.h  xpm.h  xsm.h
source/: main.c
